--- a/src/main/java/org/example/presentacion/PacienteForm.form
+++ b/src/main/java/org/example/presentacion/PacienteForm.form
@@ -46,6 +46,7 @@
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font size="14"/>
                   <text value="Editar"/>
                 </properties>
               </component>
@@ -54,6 +55,7 @@
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font size="14"/>
                   <margin top="0" left="0" bottom="0" right="0"/>
                   <text value="Eliminar"/>
                 </properties>
@@ -63,6 +65,7 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font size="14"/>
                   <text value="Crear"/>
                 </properties>
               </component>
@@ -73,6 +76,7 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <font size="14"/>
                   <text value="Buscar nombre"/>
                 </properties>
               </component>
