--- a/src/main/java/org/example/presentacion/DoctorForm.form
+++ b/src/main/java/org/example/presentacion/DoctorForm.form
@@ -51,7 +51,9 @@
                       <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-2172672"/>
                       <font size="14"/>
+                      <foreground color="-458755"/>
                       <text value="Editar"/>
                     </properties>
                   </component>
@@ -60,7 +62,9 @@
                       <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-2810880"/>
                       <font size="14"/>
+                      <foreground color="-458755"/>
                       <margin top="0" left="0" bottom="0" right="0"/>
                       <text value="Eliminar"/>
                     </properties>
@@ -70,7 +74,9 @@
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-10705648"/>
                       <font size="14"/>
+                      <foreground color="-458755"/>
                       <text value="Crear"/>
                     </properties>
                   </component>
