--- a/src/main/java/org/example/presentacion/Pagos.form
+++ b/src/main/java/org/example/presentacion/Pagos.form
@@ -19,7 +19,7 @@
           <text value="Pago de cita"/>
         </properties>
       </component>
-      <grid id="f27f0" binding="JContenido" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="f27f0" binding="JContenido" layout-manager="GridLayoutManager" row-count="10" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -40,7 +40,7 @@
           </component>
           <vspacer id="39c60">
             <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
           <component id="cb6d3" class="javax.swing.JTextField" binding="JNombre">
@@ -52,7 +52,7 @@
             <properties>
               <background color="-3082511"/>
               <foreground color="-16645630"/>
-              <text value="Escriba su nombre"/>
+              <text value=""/>
             </properties>
           </component>
           <hspacer id="58b24">
@@ -78,7 +78,7 @@
             <properties>
               <background color="-3082511"/>
               <foreground color="-16645630"/>
-              <text value="Escriba su motivo"/>
+              <text value=""/>
             </properties>
           </component>
           <hspacer id="a106c">
@@ -104,18 +104,49 @@
             <properties>
               <background color="-3082511"/>
               <foreground color="-16645630"/>
-              <text value="Escriba nombre de doctor"/>
+              <text value=""/>
             </properties>
           </component>
           <component id="328bb" class="javax.swing.JButton" binding="pagarButton" default-binding="true">
             <constraints>
-              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-11756298"/>
               <text value="Pagar"/>
             </properties>
           </component>
+          <component id="ecba1" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <foreground color="-16645630"/>
+              <text value="Monto a pagar"/>
+            </properties>
+          </component>
+          <hspacer id="ebb8">
+            <constraints>
+              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <component id="bda63" class="javax.swing.JTextField">
+            <constraints>
+              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-3082511"/>
+              <foreground color="-16645630"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <hspacer id="8664a">
+            <constraints>
+              <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
         </children>
       </grid>
     </children>
