--- a/src/main/java/org/example/presentacion/Pagos.form
+++ b/src/main/java/org/example/presentacion/Pagos.form
@@ -19,7 +19,7 @@
           <text value="Pago de cita"/>
         </properties>
       </component>
-      <grid id="f27f0" binding="JContenido" layout-manager="GridLayoutManager" row-count="10" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="f27f0" binding="JContenido" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -40,21 +40,9 @@
           </component>
           <vspacer id="39c60">
             <constraints>
-              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="cb6d3" class="javax.swing.JTextField" binding="JNombre">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <background color="-3082511"/>
-              <foreground color="-16645630"/>
-              <text value=""/>
-            </properties>
-          </component>
           <hspacer id="58b24">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -69,33 +57,30 @@
               <text value="Motivo de su cita"/>
             </properties>
           </component>
-          <component id="317c3" class="javax.swing.JTextField">
+          <component id="328bb" class="javax.swing.JButton" binding="pagarButton" default-binding="true">
             <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
+              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-3082511"/>
-              <foreground color="-16645630"/>
-              <text value=""/>
+              <background color="-11756298"/>
+              <text value="Pagar"/>
             </properties>
           </component>
-          <hspacer id="a106c">
-            <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </hspacer>
-          <component id="12f12" class="javax.swing.JLabel">
+          <component id="ecba1" class="javax.swing.JLabel">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <foreground color="-16645630"/>
-              <text value="Nombre del doctor que lo atendio"/>
+              <text value="Monto a pagar"/>
             </properties>
           </component>
-          <component id="2619f" class="javax.swing.JTextField">
+          <hspacer id="ebb8">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <component id="bda63" class="javax.swing.JTextField">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -107,46 +92,27 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="328bb" class="javax.swing.JButton" binding="pagarButton" default-binding="true">
-            <constraints>
-              <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-11756298"/>
-              <text value="Pagar"/>
-            </properties>
-          </component>
-          <component id="ecba1" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <foreground color="-16645630"/>
-              <text value="Monto a pagar"/>
-            </properties>
-          </component>
-          <hspacer id="ebb8">
+          <hspacer id="8664a">
             <constraints>
               <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <component id="bda63" class="javax.swing.JTextField">
+          <component id="48dca" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
             <constraints>
-              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-3082511"/>
-              <foreground color="-16645630"/>
-              <text value=""/>
+              <background color="-8195404"/>
             </properties>
           </component>
-          <hspacer id="8664a">
+          <component id="66f3b" class="javax.swing.JComboBox" default-binding="true">
             <constraints>
-              <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-          </hspacer>
+            <properties>
+              <background color="-8195404"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
