se modifico nombres de los jtable

--- a/src/main/java/org/example/presentacion/DoctorForm.form
+++ b/src/main/java/org/example/presentacion/DoctorForm.form
@@ -144,7 +144,7 @@
               <color color="-16743966"/>
             </border>
             <children>
-              <component id="70173" class="javax.swing.JTable" binding="table1" default-binding="true">
+              <component id="70173" class="javax.swing.JTable" binding="tabDetalles">
                 <constraints/>
                 <properties/>
               </component>
