--- a/src/main/java/org/example/presentacion/PacienteWriteForm.form
+++ b/src/main/java/org/example/presentacion/PacienteWriteForm.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.example.presentacion.CrearPacienteForm">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.example.presentacion.PacienteWriteForm">
   <grid id="27dc6" binding="MainPanel" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
@@ -16,14 +16,14 @@
       <color color="-16777216"/>
     </border>
     <children>
-      <component id="b2684" class="javax.swing.JLabel">
+      <component id="b2684" class="javax.swing.JLabel" binding="lblTitulo">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font size="24"/>
           <foreground color="-16777216"/>
-          <text value="Añadir Paciente"/>
+          <text value="Paciente"/>
         </properties>
       </component>
       <component id="abb5e" class="javax.swing.JLabel">
@@ -39,7 +39,7 @@
       <component id="fbc40" class="javax.swing.JTextField" binding="txtDireccion">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="150" height="31"/>
           </grid>
         </constraints>
         <properties>
@@ -49,7 +49,7 @@
       <component id="6c92f" class="javax.swing.JTextField" binding="txtNombre">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="150" height="31"/>
           </grid>
         </constraints>
         <properties>
@@ -82,7 +82,7 @@
       <component id="be4ca" class="javax.swing.JTextField" binding="txtTelefono">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="150" height="31"/>
           </grid>
         </constraints>
         <properties>
@@ -103,7 +103,7 @@
       <component id="74d8f" class="javax.swing.JTextField" binding="txtFecha">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="150" height="31"/>
           </grid>
         </constraints>
         <properties>
@@ -120,40 +120,42 @@
           <text value="Seleccionar Genero"/>
         </properties>
       </component>
-      <component id="a9a32" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+      <component id="a9a32" class="javax.swing.JComboBox" binding="cboGenero">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="9" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="9" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="31"/>
+          </grid>
         </constraints>
         <properties>
           <font size="16"/>
         </properties>
       </component>
-      <component id="1ae03" class="javax.swing.JButton" binding="btnCrear">
+      <component id="d846a" class="javax.swing.JButton" binding="btnCrear">
         <constraints>
           <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="-1" height="4"/>
-            <maximum-size width="200" height="-1"/>
+            <preferred-size width="150" height="40"/>
+            <maximum-size width="150" height="50"/>
           </grid>
         </constraints>
         <properties>
           <background color="-10705648"/>
-          <font size="16"/>
+          <font size="20"/>
           <foreground color="-458755"/>
           <margin top="0" left="0" bottom="0" right="0"/>
           <text value="Crear"/>
         </properties>
       </component>
-      <component id="95952" class="javax.swing.JButton" binding="btnCancelar">
+      <component id="75a3c" class="javax.swing.JButton" binding="btnCancelar">
         <constraints>
           <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="-1" height="4"/>
-            <maximum-size width="200" height="-1"/>
+            <preferred-size width="150" height="50"/>
+            <maximum-size width="150" height="40"/>
           </grid>
         </constraints>
         <properties>
           <actionCommand value="Cancelar"/>
           <background color="-2810880"/>
-          <font size="16"/>
+          <font size="20"/>
           <foreground color="-458755"/>
           <text value="Cancelar"/>
         </properties>
