--- a/src/main/java/org/example/presentacion/DoctorWriteForm.form
+++ b/src/main/java/org/example/presentacion/DoctorWriteForm.form
@@ -38,7 +38,7 @@
             <properties>
               <font size="14"/>
               <foreground color="-16777216"/>
-              <text value="Especialidad"/>
+              <text value="Especialidad *"/>
             </properties>
           </component>
           <component id="c62ee" class="javax.swing.JTextField" binding="txtEspecialidad">
@@ -69,7 +69,7 @@
             <properties>
               <font size="14"/>
               <foreground color="-16777216"/>
-              <text value="Experiencia"/>
+              <text value="Experiencia *"/>
             </properties>
           </component>
           <component id="79401" class="javax.swing.JLabel">
@@ -79,7 +79,7 @@
             <properties>
               <font size="14"/>
               <foreground color="-16777216"/>
-              <text value="Nombre"/>
+              <text value="Nombre *"/>
               <verticalAlignment value="0"/>
               <verticalTextPosition value="0"/>
             </properties>
@@ -95,7 +95,7 @@
               <font size="16"/>
             </properties>
           </component>
-          <component id="98f49" class="javax.swing.JButton" binding="btnCrear">
+          <component id="98f49" class="javax.swing.JButton" binding="btnGuardar">
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="40"/>
@@ -103,11 +103,12 @@
               </grid>
             </constraints>
             <properties>
+              <actionCommand value="Guardar"/>
               <background color="-10705648"/>
               <font size="20"/>
               <foreground color="-458755"/>
               <margin top="0" left="0" bottom="0" right="0"/>
-              <text value="Crear"/>
+              <text value="Guardar"/>
             </properties>
           </component>
           <component id="e9961" class="javax.swing.JButton" binding="btnCancelar">
@@ -132,7 +133,7 @@
             <properties>
               <font size="14"/>
               <foreground color="-16777216"/>
-              <text value="Disponibilidad"/>
+              <text value="Disponibilidad *"/>
             </properties>
           </component>
           <component id="41a3a" class="javax.swing.JComboBox" binding="cboDisponibilidad">
