--- a/src/main/java/org/example/presentacion/CitasWriteForm.form
+++ b/src/main/java/org/example/presentacion/CitasWriteForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.example.presentacion.CrearCitasForm">
-  <grid id="27dc6" layout-manager="BorderLayout" hgap="10" vgap="0">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.example.presentacion.CitasWriteForm">
+  <grid id="27dc6" binding="mainPanel" layout-manager="BorderLayout" hgap="10" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
@@ -33,7 +33,7 @@
             <properties>
               <font size="24"/>
               <foreground color="-16777216"/>
-              <text value="Añadir Cita"/>
+              <text value="Cita"/>
             </properties>
           </component>
           <component id="53837" class="javax.swing.JLabel">
