--- a/src/main/java/org/example/presentacion/Pagosform.form
+++ b/src/main/java/org/example/presentacion/Pagosform.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.example.presentacion.Pagosform">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="prinPanel" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="549" height="645"/>
@@ -111,7 +111,7 @@
                   <text value="Buscar"/>
                 </properties>
               </component>
-              <component id="71952" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+              <component id="71952" class="javax.swing.JTextField" binding="txtBuscar">
                 <constraints>
                   <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -130,7 +130,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="8c880" class="javax.swing.JTable" binding="table1" default-binding="true">
+              <component id="8c880" class="javax.swing.JTable" binding="tblDetalle">
                 <constraints/>
                 <properties/>
               </component>
