Avanzando en el codigo, diseño de pago

--- a/src/main/java/org/example/presentacion/PagoWriteForm.form
+++ b/src/main/java/org/example/presentacion/PagoWriteForm.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="26" binding="MainPanel" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="26" binding="prinPanel" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="10" left="10" bottom="10" right="10"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -44,7 +44,7 @@
               <text value="Monto"/>
             </properties>
           </component>
-          <component id="66f1b" class="javax.swing.JLabel">
+          <component id="66f1b" class="javax.swing.JLabel" binding="lblCita">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -56,7 +56,7 @@
               <verticalTextPosition value="0"/>
             </properties>
           </component>
-          <component id="b892c" class="javax.swing.JTextField" binding="txtTelefono">
+          <component id="b892c" class="javax.swing.JTextField" binding="txtMonto">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="31"/>
@@ -82,17 +82,17 @@
               <text value="Guardar"/>
             </properties>
           </component>
-          <component id="79ee4" class="javax.swing.JLabel">
+          <component id="79ee4" class="javax.swing.JLabel" binding="lblFechaPago">
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font size="14"/>
               <foreground color="-16777216"/>
-              <text value="Fecha de nacimiento"/>
+              <text value="Fecha de pago"/>
             </properties>
           </component>
-          <grid id="f3103" binding="panelFechaNacimientoContenedor" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="f3103" binding="panelFechaPago" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="-1" height="32"/>
@@ -119,7 +119,7 @@
               <text value="Cancelar"/>
             </properties>
           </component>
-          <component id="341b5" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+          <component id="341b5" class="javax.swing.JComboBox" binding="cbxcita">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
